footer fixed main scroll overflow

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -84,8 +84,6 @@
         align-items: center;
         text-align: center;
         overflow: scroll;
-
-        
         
     &#home h1{
         margin-top: 10vh;
@@ -234,7 +232,9 @@ body{
 
 
 body{
-  
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3,auto);
     // grid-template-areas: 'header'
     //                         ''
     
@@ -255,7 +255,7 @@ body{
     width: 100%;
     grid-template-columns: 1fr;
     padding: 1rem 0;
-    
+   
     
    
 }
@@ -268,7 +268,7 @@ body{
     grid-template-columns: 1fr;
     
     grid-row-gap: 2rem;
-  
+    
     
   }
 
@@ -276,6 +276,7 @@ body{
   .project{
       width: 100%;
       border-radius: 7px;
+
   }
   .project-img {
     display: block;
@@ -302,12 +303,7 @@ body{
     background: darken($primary-color,10);
     color: set-text-color($primary-color);
     height: 60px;
-    margin-top: 100vh;
-   
-   position: relative;
-   
-   z-index: 8;
-    width: 100%;
+    // margin-top: ;
     
     
 }
